# agentsim

./: .env.example  .gitignore  README.md  pyproject.toml
agentsim/: __init__.py  cli.py  config.py
agentsim/clients/: __init__.py  llm_client.py
agentsim/components/: __init__.py  base.py
agentsim/components/control/: __init__.py  base.py  condition.py
agentsim/components/planning/: __init__.py  base.py  planner.py  query_formulator.py
agentsim/components/processing/: __init__.py  base.py  deduplicator.py  extractor.py  filter.py  reranker.py
agentsim/components/retrieval/: __init__.py  base.py  chatnoir.py  opensearch.py  vector.py
agentsim/components/synthesis/: __init__.py  answer_drafter.py  (+2 more)
agentsim/prompts/: __init__.py  prompt_manager.py
agentsim/simulation/: __init__.py  loader.py  parallel_executor.py  schema.py  verifier.py
agentsim/tools/: seed_selector.py
agentsim/utils/: __init__.py  endpoint_discovery.py  trace_exporter.py
agentsim/workflow/: __init__.py  context.py  executor.py  loader.py
data/corpus/: README.md  corpus_stats.json
data/seeds/: README.md  seeds_causalqa_train_1k.jsonl  seeds_msmarco_train_1k.jsonl  seeds_quasart_train_1k.jsonl
data/simulation_output/: README.md
data/unified_corpus/: README.md
templates/simulations/: adaptive_gpt4o.yaml  exploratory_gpt4o.yaml  exploratory_minimal.yaml  exploratory_seeds.yaml  multi_teacher.yaml  ollama_local.yaml  simple_multi.yaml  simple_standard.yaml  standard_gpt4o.yaml
templates/workflows/: claude_opus_style.yaml  gemini_pro_style.yaml  gpt4o_style.yaml  simple_rag.yaml
(+11 files in other folders)
